--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": ["webpack-env", "jest", "resize-observer-browser"],
+    "types": ["webpack-env", "jest", "resize-observer-browser", "cypress"],
     "paths": {
       "@/*": ["src/*"]
     },
